enforce non-empty household members